# test_project

./: .gitignore  CMakeLists.txt  build_cmd  main.cpp  renderer.cpp  renderer.txt  renderer_small.txt  test.cpp  x_makecode
quick_make_code/: make_code.cpp
renderer_txt/: renderer.txt  renderer_3d.txt
src/: common.cpp  common.h  renderer.cpp  renderer.h
